package util;

public class exercisesMapper {
}
