@startuml
!pragma layout smetana

loginPage --* jFrameGUI
menu --* loginPage
menu *-- homePage
menu *-- workoutPage
menu *-- accountPage
menu *-- orderTren
account --> accountPage
workoutPage *-- currentTraining
currentTraining *-- exercises
currentTraining *-- homePage
exercises *-- sets
util *--* menu

main --> jFrameGUI
class main
class loginPage
class menu
class homePage
class orderTren
class workoutPage
class accountPage
class exercises
class sets
class currentTraining

class account

package jFrame {
class jFrameGUI extends jFrame
}

package util {
class accountMapper()
class exercisesMapper()
}

@enduml